--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "frontend"]
-	path = frontend
-	url = https://github.com/Bug-Busters-F/classiFy-frontend.git
-[submodule "backend"]
-	path = backend
-	url = https://github.com/Bug-Busters-F/classiFy-backend.git
+[submodule "ClassiPy-frontend"]
+	path = ClassiPy-frontend
+	url = https://github.com/Bug-Busters-F/ClassiPy-frontend
+[submodule "ClassiPy-backend"]
+	path = ClassiPy-backend
+	url = https://github.com/Bug-Busters-F/ClassiPy-backend
